2004-02-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/compress.c:  avoid a reference to uninitialized data.

2004-02-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/dib.c: initialize padding bytes.

2004-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/montage.c (MontageImages): Fix leak of texture image (big
	leak).

2004-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Fix detection of when to use a
	temporary file when writing TIFF.  Writing to TIFF BLOBs was
	broken by the recent changes to make BlobInfo a private type.
	* magick/render.c (DestroyEdge): Use memmove for overlapping copy.

2004-02-03  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/bmp.c: initialize padding bytes.

2004-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ConstituteImage): Added map support for 'P',
	in order to skip over a pad quantum.
	(DispatchImage): Added map support for 'P', in order to write a pad
	quantum.
	* magick/resize.c (HorizontalFilter): Don't process opacity
	channel unless matte is enabled.
	(VerticalFilter): Don't process opacity channel unless matte is
	enabled.
	* magick/compress.c (Ascii85Initialize): Don't overwrite an
	existing ascii85 allocation.
	* magick/utility.c (Strip): Use 'memmove' rather than 'memcpy' to
	copy overlapping data.
	* tests/rwfile.c (main): Fix memory leak in test. Only apply size
	if format requires it.
	* tests/rwblob.c (main): Fix memory leak in test. Only apply size
	if format requires it.
	* coders/mono.c (RegisterMONOImage): Mono is a raw format.
	* magick/magic.c (GetMagicInfo): Ensure that magic tests are
	within the range of header data which was read.

2004-02-02  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/bmp.c: fix potential use of uninitialized data.
	* coders/png.c: fix potential use of uninitialized data.

2004-01-31  Mike Chiarappa  <mikechiarappa@libero.it>
